--- a/Phase2/views/partials/comment.hbs
+++ b/Phase2/views/partials/comment.hbs
@@ -44,7 +44,7 @@
                 <div class="createComment replyComment">
                     <input id="draftComment" name="commentText" type="text" contenteditable="true" placeholder="Enter your comment here" oninput="if(this.innerHTML.trim()==='<br>')this.innerHTML=''"></input>
                     <div class="buttonsContainer">
-                        <button id="attachFilesComment" onclick="window.alert('To Be Done')">Attach Files</button>
+                        <!--<button id="attachFilesComment" onclick="window.alert('To Be Done')">Attach Files</button>-->
                         <button id="postComment">Reply</button>
                     </div>
                 </div>
