--- a/Phase2/views/login_page.hbs
+++ b/Phase2/views/login_page.hbs
@@ -35,6 +35,10 @@
                     <img src = "https://icon-library.com/images/password-icon-png/password-icon-png-4.jpg"/>
                     <input type="password"  placeholder="Password" name="password">
                 </div>
+                <select name="rememberMe" style="width: 60%">
+                    <option value="yes">Remember me for 3 weeks</option>
+                    <option value="no">Dont remember me when closing browser</option>
+                </select>
                 <input type="submit" value="LOGIN" class="logregbutton" id="submit-form-button">
                 </form>                      
         </div>
