--- a/Phase2/views/post_page.hbs
+++ b/Phase2/views/post_page.hbs
@@ -12,7 +12,7 @@
             <div class="authorContainer">
 
                 {{#if postdetails.p_u_OID.u_image.u_filepath}}
-                    <img class="pfp" name="profilePicture" src="/{{postdetails.p_u_OID.u_image.u_filepath}}" onclick="window.location.href='/api/user/profile/{{postdetails.p_u_OID._id}}'">
+                    <img class="pfp" name="profilePicture" src="/{{postdetails.p_u_OID.u_image.u_filepath}}" onclick="window.location.href='/api/user/profile/{{postdetails.p_u_OID._id}}'" style="height:100%">
                 {{else}}
                     <img class="pfp" name="profilePicture" src="https://upload.wikimedia.org/wikipedia/commons/a/af/Default_avatar_profile.jpg" onclick="window.location.href='/api/user/profile/{{postdetails.p_u_OID._id}}'">
                 {{/if}}
