--- a/Phase2/views/user_profile_page.hbs
+++ b/Phase2/views/user_profile_page.hbs
@@ -6,7 +6,12 @@
 
     <div class="blur profile-bar">
         <div>
-            <div class="profile-circle-holder">
+            <div class="profile-circle-holder" style="background-image: url('/{{user.u_image.u_filepath}}');">
+                {{#if user.u_image.u_filepath}}
+                <img src="/{{user.u_image.u_filepath}}">
+                {{else}}
+                <img src="/{{user.u_image.u_filepath}}">
+                {{/if}}
             </div>
             <div class="profile-details-container">
                 <div class="profile-username">{{user.u_displayname}}</div>
