added remember previouos push, added auto reload

--- a/Phase2/views/main_page.hbs
+++ b/Phase2/views/main_page.hbs
@@ -70,7 +70,7 @@
             <form class="create-post-form" name="create-post-form" action="/api/post/createPost" method="POST" enctype="multipart/form-data">
                 <div class = "close-btn" onclick="hidePopup()">&times;</div>
                 <label>Title</label>
-                <input type="text" placeholder="Enter Title" class="create-select-tag" style="width:50%" name="title" required>
+                <input type="text" placeholder="Enter Title" class="create-select-tag" style="width:40%" name="title" required>
                 <label>Tag</label>
                     <select style="width:50%" name="tags" required>
                         <option>Genshin Impact</option>
@@ -81,7 +81,7 @@
                     </select>
                 <label>Content</label>
                 <!--<input type="hidden" name="id" value={{login_id}}>  this is hardcoded for now sir said since ala pa sessions User A-->
-                <textarea class="create-post-textarea" name="body" required></textarea>
+                <textarea class="create-post-textarea" style="width:1px:"name="body" required></textarea>
                 <input type="file" style="width:50%" name="image">
                 <input type="submit" value="submit">
             </form>
