--- a/Phase2/views/main_page.hbs
+++ b/Phase2/views/main_page.hbs
@@ -63,8 +63,8 @@
     {{/each}}
 
 
-<div class = "popup" id = "popup_js">
-    <div class="for-center-create">
+<div class = "popupX" id = "popup_js">
+    <div class="">
         <div class="blur-left post-form-container">
             <h1><strong>Create Post</strong></h1>
             <form class="create-post-form" name="create-post-form" action="/api/post/createPost" method="POST" enctype="multipart/form-data">
