--- a/Phase2/views/partials/header_logged.hbs
+++ b/Phase2/views/partials/header_logged.hbs
@@ -1,5 +1,5 @@
 <navbar class="blur navbar navbar-img" style="height:200px;">
-    <div class="subnav title"><div class=TITLEE onclick="location.href ='main_page.html'">Mihoyo-X</div></div>
+    <div class="subnav title"><div class=TITLEE onclick="location.href ='/api/post/getPost'">Mihoyo-X</div></div>
     <img src = "https://static.miraheze.org/houkai2ndwiki/thumb/0/06/MiHoYo_O_logo.webp/739px-MiHoYo_O_logo.webp.png"/>
     <div class="subnav buttons">
         <input type="button" onclick="window.location.href='/api/user/profile'" value="Profile">
