--- a/Phase2/views/user_profile_page.hbs
+++ b/Phase2/views/user_profile_page.hbs
@@ -85,8 +85,8 @@
             <form class='Update-form' id="update-the-user" name="update-the-user">
                 
                 <div class="input-box">
-                    <label>displayname</label>
-                    <input type="displayname" name="displayname">
+                    <label>Display Name</label>
+                    <input type="displayname" name="displayname" value="{{user.u_displayname}}">
                     <div class = "close-btn" onclick="window.location.reload();">&times;</div>
                 </div>
                 <div class="input-box">
@@ -99,10 +99,10 @@
                 </div>
                 <div class="input-box">
                     <label>Description</label>
-                    <input type="text" class="form-profile-description" name="description">
+                    <input type="text" class="form-profile-description" name="description" value="{{user.u_description}}">
                 </div>
                 <input type="hidden" name="id" value={{login_id}}>
-                <input type="submit" value="submit-update-profile" id="submit-update-profile">
+                <input type="submit" value="update-profile" id="submit-update-profile">
             </form>      
         </div>
     </div>
@@ -129,7 +129,7 @@
                 <input type="hidden" name="post_id" value="">
                 <textarea class="create-post-textarea" name="body"></textarea>
                 <input type="file" style="width:50%" name="image">
-                <input type="submit" value="submit-update" id="submit-update">
+                <input type="submit" value="Update" id="submit-update">
                 
             </form>
             <div class = "close-btn" id="close-btn">&times;</div>
