fixed redirection of replying

--- a/Phase2/views/user_profile_page.hbs
+++ b/Phase2/views/user_profile_page.hbs
@@ -10,7 +10,7 @@
                 {{#if user.u_image.u_filepath}}
                 <img src="/{{user.u_image.u_filepath}}">
                 {{else}}
-                <img src="/{{user.u_image.u_filepath}}">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Default_avatar_profile.jpg">
                 {{/if}}
             </div>
             <div class="profile-details-container">
